--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
-* {
-	border-bottom: 5px solid mediumspringgreen;
-}
-
 h1 {
+	border: 5px solid mediumspringgreen;
 	font-size: 50px;
 	font-family: sans-serif;
 	color: springgreen;
+	display: inline;
 }
